Add lock option to deno.json

--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,6 @@
 {
   "name": "@simple/urlpattern-router",
   "version": "0.0.2",
-  "exports": "./mod.ts"
+  "exports": "./mod.ts",
+  "lock": false
 }
